--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dropdown-menu": "^0.1.1",
     "formik": "^2.4.6",
     "ky": "^1.4.0",
     "lucia": "^3.2.0",
