--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ky": "^1.4.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.411.0",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "prisma": "^5.17.0",
